--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="text-6xl">
                     The best TV available
                 </div>
-                <p>Hello World</p>
+                <p>Hello World Asia</p>
 
                 <div class="buttons">
                     <button class="bg-purple-700 px-3 py-2 rounded-2xl text-white hover:bg-purple-300 ">Buy Now</button>
