--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li class="cursor-pointer">About</li>
                 <li class="cursor-pointer">Catalogue</li>
                 <li class="cursor-pointer">Contact Us</li>
+                <li class="cursor-pointer">Help</li>
             </ul>
         </nav>
         <main>
